--- a/mingw-w64-pkg-config/PKGBUILD
+++ b/mingw-w64-pkg-config/PKGBUILD
@@ -4,7 +4,7 @@ _realname=pkg-config
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.29.2
-pkgrel=9002
+pkgrel=9003
 pkgdesc="A system for managing library compile/link flags (mingw-w64)"
 arch=('any')
 url="https://www.freedesktop.org/wiki/Software/pkg-config/"
@@ -68,7 +68,7 @@ build() {
     --host=${MINGW_CHOST} \
     --target=${MINGW_CHOST} \
     --with-internal-glib \
-    --disable-indirect-deps \
+    --enable-indirect-deps \
     --with-default-prefix-for-default-paths=${MINGW_PREFIX}
 
   make
