--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ jobs:
   - job: MINGW
     timeoutInMinutes: 360
     pool:
-      vmImage: vs2017-win2016
+      vmImage: windows-latest
     strategy:
       maxParallel: 5
       matrix:
