--- a/mingw-w64-libssh2/PKGBUILD
+++ b/mingw-w64-libssh2/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=libssh2
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.9.0
-pkgrel=9200
+pkgver=1.10.0
+pkgrel=9800
 pkgdesc="A library implementing the SSH2 protocol as defined by Internet Drafts (mingw-w64)"
 arch=('any')
 url="https://libssh2.org"
@@ -14,7 +14,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-openssl" "${MINGW_PACKAGE_PREFIX}-zlib")
 options=('staticlibs' 'strip')
 source=("${url}/download/${_realname}-${pkgver}.tar.gz"
         "fix-pkgconfig.patch")
-sha256sums=('d5fb8bd563305fd1074dda90bd053fb2d29fc4bce048d182f96eaa466dfadafd'
+sha256sums=('2d64e90f3ded394b91d3a2e774ca203a4179f69aebee03003e5a6fa621e41d51'
             '7a6545f6d457ad008aacefe04a60727c02d33927c8a903745bf191f69cc8ba55')
 
 prepare() {
@@ -27,7 +27,13 @@ build() {
   mkdir -p "${srcdir}/build-${CARCH}"
   cd "${srcdir}/build-${CARCH}"
 
-  export LIBS="-lcrypt32 -lgdi32"
+  # For R 4.2 and up we switch to native Windows SSL
+  if [[ $MINGW_PACKAGE_PREFIX == *-clang-* ]] || [[ $MINGW_PACKAGE_PREFIX == *-ucrt-* ]]; then
+    local _SSL_BACKEND=wincng
+  else
+    local _SSL_BACKEND=openssl
+    export LIBS="-lcrypt32 -lgdi32"
+  fi
 
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
@@ -36,7 +42,7 @@ build() {
     --target=${MINGW_CHOST} \
     --enable-static \
     --disable-shared \
-    --with-crypto=openssl
+    --with-crypto=$_SSL_BACKEND
 
   make
 }
