--- a/mingw-w64-libarchive/PKGBUILD
+++ b/mingw-w64-libarchive/PKGBUILD
@@ -3,13 +3,17 @@
 _realname=libarchive
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=3.3.2
-pkgrel=9002
+pkgver=3.5.2
+pkgrel=9800
 pkgdesc="library that can create and read several streaming archive formats (mingw-w64)"
 arch=('any')
 url="https://www.libarchive.org/"
 license=("BSD")
-makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-pkg-config")
+makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
+             "${MINGW_PACKAGE_PREFIX}-pkg-config"
+             "autoconf-wrapper"
+             "automake-wrapper"
+             "libtool")
 depends=(${MINGW_PACKAGE_PREFIX}-bzip2
          ${MINGW_PACKAGE_PREFIX}-expat
          ${MINGW_PACKAGE_PREFIX}-libiconv
@@ -19,16 +23,17 @@ depends=(${MINGW_PACKAGE_PREFIX}-bzip2
          ${MINGW_PACKAGE_PREFIX}-nettle
          ${MINGW_PACKAGE_PREFIX}-openssl
          ${MINGW_PACKAGE_PREFIX}-xz
-         ${MINGW_PACKAGE_PREFIX}-zlib)
-options=('!libtool' 'strip')
-source=("https://libarchive.org/downloads/${_realname}-${pkgver}.tar.gz"
-        0001-libarchive-3.2.2-bcrypt-fix.patch)
-sha256sums=('ed2dbd6954792b2c054ccf8ec4b330a54b85904a80cef477a1c74643ddafa0ce'
-            '34cca13f787493626a571bb640b62ed2193ba9c482b127ed1879819ccf3dcf2c')
+         ${MINGW_PACKAGE_PREFIX}-zlib
+         ${MINGW_PACKAGE_PREFIX}-zstd)
+source=("https://github.com/libarchive/libarchive/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.xz"
+        "0001-libarchive-3.3.3-bcrypt-fix.patch")
+sha256sums=('f0b19ff39c3c9a5898a219497ababbadab99d8178acc980155c7e1271089b5a0'
+            '2c318a025029998a9389eb99ab80f733c0fcf3b4888421879f2f6b4530d7f522')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
-  patch -p1 -i ${srcdir}/0001-libarchive-3.2.2-bcrypt-fix.patch
+  #the patch is actually not needed because we build --without-cng
+  #patch -p1 -i ${srcdir}/0001-libarchive-3.3.3-bcrypt-fix.patch
   autoreconf -fiv
 }
 
@@ -42,9 +47,12 @@ build() {
     --host="${MINGW_CHOST}" \
     --target="${MINGW_CHOST}" \
     --prefix="${MINGW_PREFIX}" \
-    --without-xml2 \
     --enable-static \
-    --disable-shared
+    --disable-shared \
+    --without-xml2 \
+    --without-cng \
+    --without-lzo2
+
   make
 }
 
