--- a/mingw-w64-openssl/PKGBUILD
+++ b/mingw-w64-openssl/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=openssl
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-_ver=1.1.1m
+_ver=3.0.1
 # use a pacman compatible version scheme
 pkgver=${_ver/[a-z]/.${_ver//[0-9.]/}}
 pkgrel=9800
@@ -15,11 +15,9 @@ options=('strip' '!buildflags' 'staticlibs')
 license=('BSD')
 url="https://www.openssl.org"
 noextract=(${_realname}-${_ver}.tar.gz)
-source=(https://www.openssl.org/source/${_realname}-${_ver}.tar.gz{,.asc}
-        'openssl-1.1.1-relocation.patch')
-sha256sums=('f89199be8b23ca45fc7cb9f1d8d3ee67312318286ad030f5316aca6462db6c96'
-            'SKIP'
-            '798d1b4dec28429d6cf2081c5b5b23b4344590a9b812e8089842389dbd175b77')
+source=(https://www.openssl.org/source/${_realname}-${_ver}.tar.gz{,.asc})
+sha256sums=('c311ad853353bce796edad01a862c50a8a587f62e7e2100ef465ab53ec9b06d1'
+            'SKIP')
 
 validpgpkeys=('8657ABB260F056B1E5190839D9C4D26D0E604491')
 
@@ -47,14 +45,6 @@ prepare() {
   [[ -d ${srcdir}/${_realname}-${_ver} ]] && rm -rf ${srcdir}/${_realname}-${_ver}
   tar -xzvf ${_realname}-${_ver}.tar.gz -C ${srcdir} || true
   cd ${srcdir}/${_realname}-${_ver}
-
-# openssl-1.0.0a-ldflags.patch
-# openssl-1.0.2a-parallel-build.patch
-# openssl-1.0.1-x32.patch
-#  openssl-0.9.6-x509.patch
-# openssl-1.0.1i-relocation.patch
-  apply_patch_with_msg \
-     openssl-1.1.1-relocation.patch
 }
 
 build() {
@@ -97,17 +87,15 @@ package() {
   cd "${srcdir}/build-${CARCH}"
   mkdir -p "${pkgdir}${MINGW_PREFIX}"/bin
   mkdir -p "${pkgdir}${MINGW_PREFIX}"/include/openssl
-  mkdir -p "${pkgdir}${MINGW_PREFIX}"/lib/engines-1_1
-  mkdir -p "${pkgdir}${MINGW_PREFIX}"/lib/pkgconfig
   mkdir -p "${pkgdir}${MINGW_PREFIX}"/share/licenses/${_realname}
 
   make -j1 DESTDIR="${pkgdir}" MANDIR="${MINGW_PREFIX}/share/man" MANSUFFIX=ssl install
-  install -D -m644 "${srcdir}/${_realname}-${_ver}/LICENSE" \
-         "${pkgdir}${MINGW_PREFIX}"/share/licenses/${_realname}/LICENSE
+  install -D -m644 "${srcdir}/${_realname}-${_ver}/LICENSE.txt" \
+         "${pkgdir}${MINGW_PREFIX}"/share/licenses/${_realname}/LICENSE.txt
 
+  mv "${pkgdir}${MINGW_PREFIX}"/lib64 "${pkgdir}${MINGW_PREFIX}"/lib || true
   chmod -R 777 "${pkgdir}${MINGW_PREFIX}"/bin
   chmod -R 777 "${pkgdir}${MINGW_PREFIX}"/lib
-  chmod -R 777 "${pkgdir}${MINGW_PREFIX}"/lib/engines-1_1
 
   install -m644 "${srcdir}/${_realname}-${_ver}/ms/applink.c" "${pkgdir}${MINGW_PREFIX}"/include/openssl/
   rm -rf "${pkgdir}${MINGW_PREFIX}"/bin/c_rehash
