--- a/mingw-w64-udunits/PKGBUILD
+++ b/mingw-w64-udunits/PKGBUILD
@@ -3,15 +3,14 @@
 _realname=udunits
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.2.27.6
+pkgver=2.2.28
 pkgrel=1
 pkgdesc="Unidata unit conversion library (mingw-w64)"
 arch=('any')
 license=("custom")
 url="https://www.unidata.ucar.edu/software/udunits/"
-source=("https://github.com/Unidata/UDUNITS-2/archive/v${pkgver}.tar.gz")
-sha256sums=('74fd7fb3764ce2821870fa93e66671b7069a0c971513bf1904c6b053a4a55ed1')
-makedepends=("${MINGW_PACKAGE_PREFIX}-cmake")
+source=("https://artifacts.unidata.ucar.edu/repository/downloads-udunits/${pkgver}/udunits-${pkgver}.tar.gz")
+sha256sums=('590baec83161a3fd62c00efa66f6113cec8a7c461e3f61a5182167e0cc5d579e')
 depends=("${MINGW_PACKAGE_PREFIX}-expat")
 options=('staticlibs' 'strip')
 
@@ -19,13 +18,12 @@ build() {
   [[ -d "${srcdir}"/build-${CARCH}-static ]] && rm -rf "${srcdir}"/build-${CARCH}-static
   mkdir -p "${srcdir}"/build-${CARCH}-static && cd "${srcdir}"/build-${CARCH}-static
 
-  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-    ${MINGW_PREFIX}/bin/cmake \
-      -G'MSYS Makefiles' \
-      -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
-      -DCMAKE_BUILD_TYPE=Release \
-      -DBUILD_SHARED_LIBS=OFF \
-      ../UDUNITS-2-${pkgver}
+  ../${_realname}-${pkgver}/configure \
+    --prefix=${MINGW_PREFIX} \
+    --build=${MINGW_CHOST} \
+    --host=${MINGW_CHOST} \
+    --disable-shared \
+    --enable-static
 
   make
 }
