--- a/mingw-w64-vtk/PKGBUILD
+++ b/mingw-w64-vtk/PKGBUILD
@@ -1,5 +1,3 @@
-# Maintainer: Kouhei Sutou <kou@clear-code.com>        emacs, make this -*- mode: yaml; -*-
-
 _realname=vtk
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
@@ -10,19 +8,12 @@ arch=("any")
 url="https://vtk.org"
 license=("BSD")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
-             "${MINGW_PACKAGE_PREFIX}-gcc"
-             "${MINGW_PACKAGE_PREFIX}-curl")
+             "${MINGW_PACKAGE_PREFIX}-gcc")
 options=("staticlibs" "strip")
 
-source=(${_realname}-${pkgver}.tar.gz::"https://www.vtk.org/files/release/${pkgver%.*}/VTK-${pkgver}.tar.gz")
+source=("https://www.vtk.org/files/release/${pkgver%.*}/VTK-${pkgver}.tar.gz")
 sha256sums=("1b39a5e191c282861e7af4101eaa8585969a2de05f5646c9199a161213a622c7")
 noextract=(${_realname}-${pkgver}.tar.gz)
-
-prepare() {
-  # Workaround for symlinks in tarball
-  MSYS="winsymlinks:lnk" tar -xf ${srcdir}/${_realname}-${pkgver}.tar.gz
-  cd "${srcdir}/${_realname}-${pkgver}"
-}
 
 build() {
   CFLAGS+=" ${CPPFLAGS}"
